using image buttons for remoteview since switch view won't work.  buttons now showing in notification component.  not active yet though.

--- a/app/src/main/res/layout/beacon_notification_layout.xml
+++ b/app/src/main/res/layout/beacon_notification_layout.xml
@@ -3,9 +3,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Switch
-        android:id="@+id/btn_response"
+    <ImageButton
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_launcher"
+        android:contentDescription="@string/btn_yes"
+        android:id="@+id/btnYes"/>
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_launcher"
+        android:contentDescription="@string/btn_no"
+        android:id="@+id/btnNo"/>
 
 </LinearLayout>
