--- a/app/src/main/res/layout/beacon_notification_layout.xml
+++ b/app/src/main/res/layout/beacon_notification_layout.xml
@@ -3,6 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/notification"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/location"/>
+
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
