--- a/app/src/main/res/layout/detail_cell.xml
+++ b/app/src/main/res/layout/detail_cell.xml
@@ -6,6 +6,6 @@
     <Switch
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/beaconName"/>
+        android:id="@+id/detailName"/>
 
 </LinearLayout>
