alerting switch for yes no in settings

--- a/app/src/main/res/layout/detail_cell.xml
+++ b/app/src/main/res/layout/detail_cell.xml
@@ -6,6 +6,8 @@
     <Switch
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textOff="@string/btn_no"
+        android:textOn="@string/btn_yes"
         android:id="@+id/detailName"/>
 
 </LinearLayout>
