--- a/app/src/main/res/layout/beacon_notification_layout.xml
+++ b/app/src/main/res/layout/beacon_notification_layout.xml
@@ -1,4 +1,72 @@
-<RelativeLayout
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <ImageView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_marginTop="10dp"
+        android:contentDescription="@string/notification"
+        android:id="@+id/leftImage"
+        android:src="@drawable/questionmark" />
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_marginTop="10dp"
+        android:layout_weight="3"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:id="@+id/detailName"
+            android:textSize="14sp"
+            android:textIsSelectable="false"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:maxLines="4"
+            android:id="@+id/detailDescription"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:id="@+id/btnYes"
+            android:src="@drawable/checkmark"
+            android:contentDescription="@string/btn_yes"/>
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnNo"
+            android:src="@drawable/xmark"
+            android:contentDescription="@string/btn_yes"/>
+
+    </LinearLayout>
+
+</LinearLayout>
+
+
+
+
+<!--<RelativeLayout
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
@@ -46,4 +114,4 @@
         android:layout_below="@+id/btnYes"
         android:layout_alignParentEnd="true"
         android:src="@drawable/xmark" />
-</RelativeLayout>
+</RelativeLayout> -->
