--- a/webprototype/public/css/style.css
+++ b/webprototype/public/css/style.css
@@ -7,25 +7,27 @@ div p{
     padding: 0px;
 }
 @font-face {
-    font-family: 'lane_-_narrowregular';
+//    font-family: 'lane_-_narrowregular';
+/*
     src: url('/fonts/lanenar_-webfont.eot');
     src: url('/fonts/lanenar_-webfont.eot?#iefix') format('embedded-opentype'),
          url('/fonts/lanenar_-webfont.woff') format('woff'),
          url('/fonts/lanenar_-webfont.ttf') format('truetype'),
          url('/fonts/lanenar_-webfont.svg#lane_-_narrowregular') format('svg');
+*/
     font-weight: normal;
     font-style: normal;
 }
 h1 {
     color: #328fe6;
-    font-family: 'lane_-_narrowregular';
+//    font-family: 'lane_-_narrowregular';
     margin: 0px;
     padding: 0px;
     background-color: #ffffff;
 }
 h2 {
     color: #328fe6;
-    font-family: 'lane_-_narrowregular';
+//    font-family: 'lane_-_narrowregular';
     font-size: 16px;
     margin: 0px;
     padding: 0px;
@@ -97,14 +99,14 @@ img.resize {
 }
 #Input {
     text-align: center;
-    font-family: 'lane_-_narrowregular';
+//    font-family: 'lane_-_narrowregular';
     font-weight: bolder;
 
 }
 .FloatLeft span {
         height: 250px; float:left; margin:15px;
 }
-.Slider {
+.Beacon {
     float: left;
     width: 25%;
     margin: 1% 0 0 0;
